src/objects/Dashboard_Helptext__mdt.object
<CustomObject>
    <description>Helptext for different Statuses and Sub-statuses of the pre-licensure, license, and renewal/reinstate phase.</description>
    <fields>
        <fullName>Help_Text__c</fullName>
        <label>Help Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Endorsement</fullName>
                    <default>true</default>
                    <label>Endorsement</label>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Pre-Licensure Application</fullName>
                </value>
                <value>
                    <fullName>Renewal/Reinstatement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Generate Fee</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>In-Review</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Pending Action</fullName>
                </value>
                <value>
                    <fullName>Pending Additional Qualifications</fullName>
                </value>
                <value>
                    <fullName>Pending Payment</fullName>
                </value>
                <value>
                    <fullName>Revoked</fullName>
                </value>
                <value>
                    <fullName>Submission Failed</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Sunset</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Unlicensed Activity</fullName>
                </value>
                <value>
                    <fullName>Waiting for Third Party Verification</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Additional Fee Required</fullName>
                    <default>true</default>
                    <label>Additional Fee Required</label>
                </value>
                <value>
                    <fullName>Additional Information Required</fullName>
                </value>
                <value>
                    <fullName>Applicant action</fullName>
                </value>
                <value>
                    <fullName>Child Support Suspension</fullName>
                </value>
                <value>
                    <fullName>Company Inactive</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Designated Person Inactive</fullName>
                </value>
                <value>
                    <fullName>DHP</fullName>
                </value>
                <value>
                    <fullName>Dishonored Payment</fullName>
                </value>
                <value>
                    <fullName>Insurance/Bond Not Active</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Out of business</fullName>
                </value>
                <value>
                    <fullName>Resigned</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Surrendered</fullName>
                </value>
                <value>
                    <fullName>Third party action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Dashboard Helptext</label>
    <pluralLabel>Dashboard Helptexts</pluralLabel>
</CustomObject>